# perl-Amazon-CloudWatchEvents

./: .gitignore  Makefile.in  NEWS.md  README.md  aclocal.m4  configure  configure.ac  perl-Amazon-CloudWatchEvents.spec.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
src/: Makefile.in
src/examples/: DescribeRule.pl  DisableRule.pl  EnableRule.pl  PutEvents.pl  PutRule.pl  PutTargets.pl  README.md
src/main/: Makefile.in
src/main/perl/: Makefile.am  Makefile.in
src/main/perl/lib/: Makefile.am  Makefile.in
src/main/perl/lib/Amazon/: CloudWatchEvents.pm.in
src/main/perl/lib/Amazon/CloudWatchEvents/: Event.pm.in  Events.pm
src/main/perl/t/: 00-load.t  Makefile.am  amazon-cloudwatchevents.t
